Fix photo resizing and spacing issues

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ header {
     list-style-type: none;
     padding: 8px;
     gap: 15px;
+
 }
 
 .nav a {
@@ -60,12 +61,14 @@ header {
 .hero-right,
 .hero-left {
     flex: 1;
-    padding: 48px;
+    padding: 20px 48px;
     display: flex;
 }
 
 .hero-right {
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .welcome {
@@ -88,11 +91,16 @@ header {
     align-self: flex-start;
 }
 
+.hero-left {
+    justify-content: center;
+}
+
 .hero img {
     max-width: 100%;
-    flex-basis: 250px;
-    border-radius: 15%;
+    flex-basis: 350px;
+    border-radius: 40px;
     padding: 10px 0;
+    min-width: 232px;
 }
 
 /* PHOTOS */
@@ -120,7 +128,7 @@ header {
 
 .photo img {
     border: 2px solid #3882F6;
-    border-radius: 40px;
+    border-radius: 20px;
     max-width: 70%;
     margin-bottom: 15px;
 }
